# tauri-steam-checker

./: README.md  index.html  package.json  supabase_schema.sql  vite.config.ts
src/: App.vue  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  gathering.rs  lib.rs  main.rs
src/components/: CopyButton.vue  DataSourceIndicator.vue  DetailsModal.vue  ErrorMessage.vue  ExpandableSection.vue  GamePreviewCard.vue  GamingDashboard.vue  GamingTab.vue  InfoRow.vue  LoadingSpinner.vue  ProfileTab.vue  StatusBadge.vue  StatusBar.vue  StatusPanel.vue  SteamUserCard.vue  TabbedDetails.vue  TechnicalDetails.vue  TechnicalTab.vue  UserHeader.vue  UserIdentity.vue  UserSearch.vue
src/composables/: steamService.ts
