[package]
name = "tauri-steam-checker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_steam_checker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
steamid_find = { path = "../../steamid-finder-rs", features = ["fetch"] }
lazy_static = "1.5.0"
machineid-rs = "1.2.4"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 256
incremental = true
lto = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
debug = false
panic = "abort"
strip = "symbols"
